<resources>
    <string name="app_name">ScheduleMAI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_lesson">NewLessonActivity</string>
    <string name="title_activity_lesson_details">LessonDetailsActivity</string>
    <string name="title_activity_modify_lesson">ModifyLessonActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <!-- <string name="button_new_lesson">Новое занятие</string> -->
    <string name="Day">День</string>
    <string name="Month">Месяц</string>
    <string name="Year">Год</string>
    <string name="Season">2015/2016</string>
    <string name="stOK">OK</string>
    <string name="stModify">Изменить</string>
    <string name="stDelete">Удалить</string>
    <string name="stSave">Сохранить</string>
    <string name="stLessonName">Название занятия</string>
    <string name="stLessonType">Тип занятия</string>
    <string name="stTeacherName">ФИО преподавателя</string>
    <string name="stNewLesson">Новое занятие</string>
    <string name="stLoadSchedule">Календарь</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="group_name">Номер группы:</string>
    <string name="stNext">Далее</string>
    <string name="user_type">Выберите тип пользователя:</string>
    <string name="teacher_name">Имя преподавателя</string>
    <string name="stGroupsName">Группы:</string>
    <string name="stRefresh">Обновить</string>
    <string name="change_user">Сменить пользователя</string>
    <string name="loginSt">Логин:</string>
    <string name="passwordSt">Пароль:</string>
    <string name="stBuilding">Корпус</string>
    <string name="stRoom">Аудитория</string>
    <string name="stDeleteToday">Удалить только сегодня</string>
    <string name="stDeleteAlways">Удалить на каждой неделе</string>
</resources>
