<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AuthenticationActivity">

    <TextView
        android:id="@+id/tvUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_type"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner
        android:id="@+id/spinnerUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUserType">
    </Spinner>

    <TextView
        android:id="@+id/tvGroupNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:layout_below="@id/spinnerUserType"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner
        android:id="@+id/spinnerGroupNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGroupNumber">
    </Spinner>

    <TextView
        android:id="@+id/tvTeacherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher_name"
        android:layout_below="@id/spinnerUserType"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner
        android:id="@+id/spinnerTeacherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@id/tvTeacherName">
    </Spinner>

    <Button
        android:id="@+id/buttonGroupNumberOrTeacherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stNext"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
