<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.schedulemai.admin.AdminNewLessonActivity">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stLessonName"
        android:id="@+id/textViewM_a" />

    <EditText
        android:id="@+id/lessonNameAdminEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите название занятия..."
        />

    <ListView
        android:id="@+id/lessonNameAdminListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stLessonType"
        android:id="@+id/textView2M_a"
        />

    <EditText
        android:id="@+id/lessonTypeAdminEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите тип занятия..."
        />

    <ListView
        android:id="@+id/lessonTypeAdminListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stTeacherName"
        android:id="@+id/textView3M_a"
       />

    <EditText
        android:id="@+id/teacherNameAdminEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите ФИО препоадавателя..."
        />

    <ListView
        android:id="@+id/teacherNameAdminListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/stBuilding"-->
        <!--android:id="@+id/textView4M_a"-->
        <!--android:layout_below="@+id/sp_teachername_a"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->

    <!--<Spinner-->
        <!--android:id="@+id/sp_building_a"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/textView4M_a"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true">-->
    <!--</Spinner>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stRoom"
        android:id="@+id/textView5M_a"
         />

    <EditText
        android:id="@+id/lessonRoomAdminEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите название аудитории..."
        />

    <ListView
        android:id="@+id/lessonRoomAdminListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Начало:  "
            android:id="@+id/textViewBeginTime_a"
            android:layout_marginTop="2dp"
            />

        <com.github.pinball83.maskededittext.MaskedEditText
            android:id="@+id/editTextBeginTime_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:mask="**:**"
            app:notMaskedSymbol="*"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Конец:    "
            android:id="@+id/textViewEndTime_a"
            android:layout_marginTop="2dp" />

        <com.github.pinball83.maskededittext.MaskedEditText
            android:id="@+id/editTextEndTime_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:mask="**:**"
            app:notMaskedSymbol="*"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stSave"
            android:id="@+id/save_button_a"
            android:layout_gravity="bottom"
        />
    </LinearLayout>


    <!--TODO: что это?-->
    <Button
        android:id="@+id/buttonRefresh_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stRefresh"
        android:visibility="gone"
        android:enabled="false"
        android:layout_alignParentBottom="true" />





</LinearLayout>
