<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stSave"
        android:id="@+id/save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stLessonName"
        android:id="@+id/textViewM"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name1"
        android:layout_below="@+id/textViewM"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stLessonType"
        android:id="@+id/textView2M"
        android:layout_below="@+id/name1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/type1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2M"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stTeacherName"
        android:id="@+id/textView3M"
        android:layout_toRightOf="@+id/teacher1"
        android:layout_below="@+id/type1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teacher1"
        android:layout_below="@+id/textView3M"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/type1"
        android:layout_alignEnd="@+id/type1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Начало:  "
        android:id="@+id/textViewBeginTime"
        android:layout_below="@+id/teacher1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editTextBeginTime"
        android:layout_centerVertical="true"
        android:layout_alignBottom="@+id/textViewBeginTime"
        android:layout_toRightOf="@+id/textViewBeginTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Конец:"
        android:id="@+id/textViewEndTime"
        android:layout_below="@+id/editTextBeginTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editTextEndTime"
        android:layout_alignBottom="@+id/textViewEndTime"
        android:layout_alignLeft="@+id/editTextBeginTime"
        android:layout_alignStart="@+id/editTextBeginTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Аудитория:   "
        android:id="@+id/textViewLessonRoom"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textViewEndTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLessonRoom"
        android:layout_alignBottom="@+id/textViewLessonRoom"
        android:layout_toRightOf="@+id/textViewLessonRoom"
        android:layout_alignRight="@+id/editTextEndTime"
        android:layout_alignEnd="@+id/editTextEndTime" />

</RelativeLayout>
